# click-async-plugins

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  pyproject.toml
.github/workflows/: python-package.yml
click_async_plugins/: __init__.py  command.py  core.py  debug.py  group.py  itc.py  typedefs.py  util.py
tests/: test_typedefs.py
